--- a/css/stylepart3.css
+++ b/css/stylepart3.css
@@ -24,5 +24,14 @@ h3 + ul {
     border: 4px dotted purple;
 }
 
+li a {
+    color: red;
+}
+
+li a[href="www.npr.org"]{
+    color: blue;
+    border: 5px solid orange;
+}
+
 
 
